# simple-file-parser-gs

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-app.yml
jupyter/: notebook_analitas.ipynb  notebook_analitas.py
test/: test_parser.py
